* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.0
- Update from camptocamp/systemd to puppet/systemd

* Wed Jun 23 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.8.0
- Updated the README

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.8.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed May 26 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.7.1
- Fixed
  - Mask the service when disabling for rngd compatibility so that it is not
    restarted on reboot
- Changed
  - Support puppetlabs/stdlib 7.X
  - Updated REFERENCE.md

* Wed Feb 03 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.7.0
- Ensure that haveged does not start by default if rngd is running
- Add `haveged__rngd_enabled` fact
- Remove all remaining EL6 code
- Migrate all capabilities to systemd
- Update parameter documentation and generate REFERENCE.md
- Add support for Puppet 7
- Fix spec tests

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.7.0
- Removed EL6 support

* Mon Dec 16 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.6.0-0
- Add EL 8 support

* Fri Aug 02 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.5.0-0
- Remove Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support
- Maintenance: removed OBE build/rpm_metadata/requires

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.7-0
- Update the upper bound of stdlib to < 6.0.0

* Thu Nov 01 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.4.6-0
- static asset updates for puppet 5

* Thu Mar 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.5-0
- Add support for OracleLinux 6 and 7
- Test against Puppet 5

* Thu Aug 17 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.4-0
- Update the README with the new badges and improve formatting

* Thu Jul 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.3-0
- Fix bad 0.4.2 tag.  In that tag, the metadata.json was incorrect.
