@@ -1,6 +1,6 @@
 {
   "name": "simp-haveged",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "author": "SIMP Team",
   "summary": "Install and manage the HAVEGE daemon.",
   "license": "BSD-2-Clause",
